objects/Open_Enrollment_Meetings__c.object
<CustomObject>
    <description>This object is a container for all individual OE Meetings.  An Account may be associated to 0 to many Open Enrollment Meeting (Groupings).</description>
    <fields>
        <fullName>Account_Branding__c</fullName>
        <formula>TEXT(Account__r.Branding__c)</formula>
        <label>Account Branding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>TEXT(Account__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the account for which the OE meetings will be recorded.</description>
        <inlineHelpText>Select an account if this set of meetings is related to an account in Salesforce.com.</inlineHelpText>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Open Enrollment Meetings</relationshipLabel>
        <relationshipName>Open_Enrollment_Meetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Details / Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Plan_Types_Programs__c</fullName>
        <formula>IF(INCLUDES(Plan_Type__c,&apos;CA - Vivity&apos;),&apos;CA - Vivity, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;CA - SIMNSA&apos;),&apos;CA - SIMNSA, &apos;, null)+ 
IF(INCLUDES(Plan_Type__c,&apos;CA - Healthy Support&apos;),&apos;CA - Healthy Support, &apos;,null)+
IF(INCLUDES(Plan_Type__c,&apos;CA - Elements Choice&apos;),&apos;CA - Elements Choice, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;CA - Elements Choice EQ&apos;),&apos;CA - Elements Choice EQ, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;CA - First Impressions&apos;),&apos;CA - First Impressions, &apos;,null)+
IF(INCLUDES(Plan_Type__c,&apos;CA - Transition Assistance&apos;),&apos;CA - Transition Assistance, &apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Plan Types/Programs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Carrier Details / Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Vendors__c</fullName>
        <label>Additional Vendors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Sole_Carrier_or_Multi_Carriers__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical - Aetna</fullName>
                </value>
                <value>
                    <fullName>Medical - Assurant Health</fullName>
                </value>
                <value>
                    <fullName>Medical - Cigna</fullName>
                </value>
                <value>
                    <fullName>Medical - Coventry</fullName>
                </value>
                <value>
                    <fullName>Medical - First Health</fullName>
                </value>
                <value>
                    <fullName>Medical - Great West Healthcare</fullName>
                </value>
                <value>
                    <fullName>Medical - Kaiser</fullName>
                </value>
                <value>
                    <fullName>Medical - United Healthcare</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - Aflac</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - Colonial</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - CVS / Caremark</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - Delta Dental</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - Express Scripts</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - Guardian</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - Medical Eye Services (MES)</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - MetLife</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - PayFlex</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - VSP Vision Care</fullName>
                </value>
                <value>
                    <fullName>Rx/Specialty/FSA - Wageworks</fullName>
                </value>
                <value>
                    <fullName>Other - List Below</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                    <isActive>false</isActive>
                    <label>Dental</label>
                </value>
                <value>
                    <fullName>EAP</fullName>
                    <isActive>false</isActive>
                    <label>EAP</label>
                </value>
                <value>
                    <fullName>FSA</fullName>
                    <isActive>false</isActive>
                    <label>FSA</label>
                </value>
                <value>
                    <fullName>Medical</fullName>
                    <isActive>false</isActive>
                    <label>Medical</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Rx</fullName>
                    <isActive>false</isActive>
                    <label>Rx</label>
                </value>
                <value>
                    <fullName>Vision</fullName>
                    <isActive>false</isActive>
                    <label>Vision</label>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                    <isActive>false</isActive>
                    <label>Wellness</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alongside_Kaiser__c</fullName>
        <label>Alongside Kaiser</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ancillary_Programs__c</fullName>
        <formula>iF(INCLUDES(Plan_Type__c,&apos;Anthem Health Marketplace/Bloom&apos;),&apos;Anthem Health Marketplace/Bloom, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - FSA&apos;),&apos;ANC - FSA, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Dental&apos;),&apos;ANC - Dental, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Basic Life&apos;),&apos;ANC - Basic Life, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Voluntary Life&apos;),&apos;ANC - Voluntary Life, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - AD&amp;D&apos;),&apos;ANC - AD&amp;D, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - STD&apos;),&apos;ANC - STD, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - LTD&apos;),&apos;ANC - LTD, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Rx&apos;),&apos;ANC - Rx, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Vision&apos;),&apos;ANC - Vision, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Anthem Health Guide&apos;),&apos;ANC - Anthem Health Guide, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Integrated Health Model&apos;),&apos;ANC - Integrated Health Model, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Voluntary STD&apos;),&apos;ANC - Voluntary STD, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Voluntary LTD&apos;),&apos;ANC - Voluntary LTD, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;ANC - Voluntary AD&amp;D&apos;),&apos;ANC - Voluntary AD&amp;D, &apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ancillary Programs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT(Account__r.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Website__c</fullName>
        <description>Account Anthem Website</description>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Websites__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Websites</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Are_specialty_lines_being_offered__c</fullName>
        <description>for Specialty team</description>
        <label>Are specialty lines being offered?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Size__c</fullName>
        <label>Case Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pooled - Major Accounts 100-125</fullName>
                </value>
                <value>
                    <fullName>Pooled - Major Accounts 126-300</fullName>
                </value>
                <value>
                    <fullName>Non-Pooled - Major Accounts 126-999</fullName>
                </value>
                <value>
                    <fullName>Non-Pooled - Special Accounts (Local Groups 1000+)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Arrangement__c</fullName>
        <description>Multi-select, visible to National, Local Sales and National Open Enrollment.</description>
        <label>Client Arrangement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Renewal - Growth Opportunity</fullName>
                </value>
                <value>
                    <fullName>Renewal – Full Replacement</fullName>
                </value>
                <value>
                    <fullName>Renewal – Partial Replacement</fullName>
                </value>
                <value>
                    <fullName>Renewal – Minimal Changes</fullName>
                </value>
                <value>
                    <fullName>Renewal – Additional Plan Offerings</fullName>
                </value>
                <value>
                    <fullName>Renewal – No Changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Drivers_Issues_Risks__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this space to list out any notable Client Drivers, Issues / Risks, Talking Points, and Division Names.</inlineHelpText>
        <label>Client Drivers, Issues / Risks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is for comments for the group of meetings</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a comment here for all meetings in the grouping (not for a single meeting).</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>This field is for the name of the client if the client is not in Salesforce.com</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the company name if the client is not in Salesforce.com</inlineHelpText>
        <label>Company Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Local__c</fullName>
        <description>Local Users Access Only</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Center - Local</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Center_National__c</fullName>
        <description>National Users Access Only</description>
        <label>Cost Center - National</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National - Northeast - 5360500300</fullName>
                </value>
                <value>
                    <fullName>National - Central - 5100168000</fullName>
                </value>
                <value>
                    <fullName>National - Southeast - 5100167100</fullName>
                </value>
                <value>
                    <fullName>National - West - 5100167800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Partner_Type__c</fullName>
        <label>Domestic Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Sex</fullName>
                </value>
                <value>
                    <fullName>Opposite Sex</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_Partner__c</fullName>
        <label>Domestic Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dress_Code_for_Event__c</fullName>
        <label>Dress Code for Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Casual</fullName>
                </value>
                <value>
                    <fullName>Business Formal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <formula>TEXT( Account__r.Exchange__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Account__r.GroupNumbers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>TEXT(Account__r.Group_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_existing_how_many_years_with_Anthem__c</fullName>
        <formula>(TODAY()- Account__r.Original_Effective_Date__c ) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If existing, how many years with Anthem?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Facilitator_Recruitment_Required__c</fullName>
        <label>Facilitator Needed for Any Meeting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_voluntary_arrangement__c</fullName>
        <description>for Specialty Reporting</description>
        <inlineHelpText>If voluntary arrangement is yes, then be sure to include the voluntary plan type(s).</inlineHelpText>
        <label>Is this a voluntary arrangement?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Are_specialty_lines_being_offered__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logged_In_User_Profile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment__c</fullName>
        <formula>TEXT(Account__r.Market_Sub_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Programs__c</fullName>
        <formula>IF(INCLUDES(Plan_Type__c,&apos;Med - Blue Priority&apos;),&apos;Med - Blue Priority, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - EPO&apos;),&apos;Med - EPO, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - HMO&apos;),&apos;Med - HMO, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - JAA&apos;),&apos;Med - JAA, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - POS&apos;),&apos;Med - POS, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - PPO&apos;),&apos;Med - PPO, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - CDHP – HSA&apos;),&apos;Med - CDHP – HSA, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - CDHP – HRA&apos;),&apos;Med - CDHP – HRA, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - CDHP-HIA&apos;),&apos;Med - CDHP-HIA, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - Select HMO&apos;),&apos;Med - Select HMO, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - Select Plus HMO&apos;),&apos;Med - Select Plus HMO, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - Priority Select HMO&apos;),&apos;Med - Priority Select HMO, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - Select PPO&apos;),&apos;Med - Select PPO, &apos;,null)+ 
IF(INCLUDES(Plan_Type__c,&apos;Med - Live Health Online&apos;),&apos;Med - Live Health Online, &apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Programs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Customer_Service_Hrs_of_Operation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Hours of Operation will auto-populate upon saving for California users</inlineHelpText>
        <label>Member Customer Service Hrs of Operation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Customer_Service_Telephone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Customer Service Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_Customer_Service_Timezone__c</fullName>
        <label>Member Customer Service Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern Standard Time</fullName>
                </value>
                <value>
                    <fullName>Central Standard Time</fullName>
                </value>
                <value>
                    <fullName>Mountain Standard Time</fullName>
                </value>
                <value>
                    <fullName>Pacific Standard Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OE_Coordinator_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is from the Facilitator account.  It will be populated by a workflow.  The OE Coordinator is now a Facilitator role on the facilitator account so they can manage who the facilitator will be should there be personnell changes</description>
        <inlineHelpText>This field will be populated when you save the record.  There is no need to enter the OE Coordinator..</inlineHelpText>
        <label>OE Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Facilitator_Type__c</field>
                <operation>equals</operation>
                <value>OE Coordinator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Enrollment Meetings</relationshipLabel>
        <relationshipName>Open_Enrollment_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OE_Meetings_Group_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE Meetings Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Micro_Site__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment Micro-Site</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Effective_Date__c</fullName>
        <formula>Account__r.Original_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Carrier_Takeover__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Carrier Takeover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Dress_Code_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Dress Code Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantees_Comments__c</fullName>
        <description>Dependency on Performance Guarantees field - Only display if YES is select above</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Performance Guarantees Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantees__c</fullName>
        <label>Performance Guarantees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permission_set__c</fullName>
        <formula>IF($Permission.OE_Submit_Meetings ,&quot;OESubmitMeetings&quot;,&quot;&quot;)</formula>
        <label>Permission set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Changes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Changes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <description>The Plan Type for the meetings group.</description>
        <inlineHelpText>Select the Product offering for this group of meetings.</inlineHelpText>
        <label>Plan Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>MED     CDHP- HIA</fullName>
                </value>
                <value>
                    <fullName>MED     CDHP - HRA</fullName>
                </value>
                <value>
                    <fullName>MED     CDHP -HSA</fullName>
                    <label>MED     CDHP - HSA</label>
                </value>
                <value>
                    <fullName>MED     POS</fullName>
                </value>
                <value>
                    <fullName>MED     PPO</fullName>
                </value>
                <value>
                    <fullName>MED     EPO</fullName>
                </value>
                <value>
                    <fullName>MED     HMO</fullName>
                </value>
                <value>
                    <fullName>MED     JAA</fullName>
                </value>
                <value>
                    <fullName>MED     LiveHealth Online</fullName>
                </value>
                <value>
                    <fullName>MED     Engage</fullName>
                </value>
                <value>
                    <fullName>CA      Elements Choice</fullName>
                </value>
                <value>
                    <fullName>CA      Elements Choice EQ</fullName>
                </value>
                <value>
                    <fullName>CA      First Impressions</fullName>
                </value>
                <value>
                    <fullName>CA      SIMNSA</fullName>
                </value>
                <value>
                    <fullName>CA      Transition Assistance</fullName>
                </value>
                <value>
                    <fullName>CA      Vivity</fullName>
                </value>
                <value>
                    <fullName>Group Retiree   MA HMO</fullName>
                </value>
                <value>
                    <fullName>Group Retiree   MAPD-HMO</fullName>
                </value>
                <value>
                    <fullName>Group Retiree   MAPD- PPO</fullName>
                </value>
                <value>
                    <fullName>Group Retiree   MA PPO</fullName>
                </value>
                <value>
                    <fullName>Group Retiree   PDP</fullName>
                </value>
                <value>
                    <fullName>HW – Group Retiree - Silver Sneakers</fullName>
                </value>
                <value>
                    <fullName>HW      24/7 Nurseline</fullName>
                </value>
                <value>
                    <fullName>HW      AIM</fullName>
                </value>
                <value>
                    <fullName>HW      Anthem Health Guide</fullName>
                </value>
                <value>
                    <fullName>HW      Anthem Health Rewards</fullName>
                </value>
                <value>
                    <fullName>HW      Anthem Mobile Health</fullName>
                </value>
                <value>
                    <fullName>HW      Complex Care</fullName>
                </value>
                <value>
                    <fullName>HW      ConditionCare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IF(And(ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c,&apos;Multi Carrier&apos;),
or( INCLUDES(Client_Arrangement__c,&apos;New Business&apos;),INCLUDES(Client_Arrangement__c,&apos;Renewal - Growth Opportunity&apos;),INCLUDES(Client_Arrangement__c,&apos;Renewal – Full Replacement&apos;))),&apos;1A&apos;,
IF(And(ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c,&apos;Sole Carrier&apos;),
or( INCLUDES(Client_Arrangement__c,&apos;New Business&apos;),INCLUDES(Client_Arrangement__c,&apos;Renewal - Growth Opportunity&apos;),INCLUDES(Client_Arrangement__c,&apos;Renewal – Full Replacement&apos;))),&apos;1B&apos;,
IF(And(ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c,&apos;Multi Carrier&apos;),
or(INCLUDES(Client_Arrangement__c,&apos;Renewal – Partial Replacement&apos;),INCLUDES(Client_Arrangement__c,&apos;Renewal – Minimal Changes&apos;),INCLUDES(Client_Arrangement__c,&apos;Renewal – Additional Plan Offerings&apos;))),&apos;2A&apos;,
IF(And(ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c,&apos;Sole Carrier&apos;),
or( INCLUDES(Client_Arrangement__c,&apos;Renewal – Partial Replacement&apos;),INCLUDES(Client_Arrangement__c,&apos;Renewal – Minimal Changes&apos;),INCLUDES(Client_Arrangement__c,&apos;Renewal – Additional Plan Offerings&apos;))),&apos;2B&apos;,
IF(And(ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c,&apos;Multi Carrier&apos;),OR(INCLUDES(Client_Arrangement__c,&apos;Renewal – No Changes&apos;),INCLUDES(Client_Arrangement__c,&apos;&apos;))),&apos;3A&apos;,IF(And(ISPICKVAL(Sole_Carrier_or_Multi_Carriers__c,&apos;Sole Carrier&apos;),Or(INCLUDES(Client_Arrangement__c,&apos;Renewal – No Changes&apos;),INCLUDES(Client_Arrangement__c,&apos;&apos;))),&apos;3B&apos;,&apos;&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_was_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Super Clone will check this box when the record is created by user cloning the set of meetings.</description>
        <label>Record was Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>Text( Account__r.Renewal_Month_Medical__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_is_from__c</fullName>
        <label>Request is from</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Medical</fullName>
                    <default>true</default>
                    <label>Commercial Medical</label>
                </value>
                <value>
                    <fullName>Group Retiree Solutions</fullName>
                </value>
                <value>
                    <fullName>Voluntary Specialty</fullName>
                </value>
                <value>
                    <fullName>Specialty Only</fullName>
                </value>
                <value>
                    <fullName>Group Retiree Solution</fullName>
                    <isActive>false</isActive>
                    <label>Group Retiree Solution</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_OEM_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy OEM ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>TEXT(Account__r.Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sole_Carrier_or_Multi_Carriers__c</fullName>
        <inlineHelpText>If there are other Vendors please list here:</inlineHelpText>
        <label>Carrier Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Carrier</fullName>
                </value>
                <value>
                    <fullName>Multi Carrier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>